Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/ISM_Material_with_OPC_Snapshot__c.object-meta.xml
<CustomObject>
    <description>ISM Material Snapshot (Opportunities) with added OPC to the report type.</description>
    <label>ISM Material with OPC Snapshot</label>
    <nameField>
        <label>ISM Material with OPC Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ISM Material with OPC Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>