Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Created_By_OPC__c.field-meta.xml
<CustomField>
    <fullName>Created_By_OPC__c</fullName>
    <label>Created By (OPC)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>