Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Fulfilling_Entity__c.field-meta.xml
<CustomField>
    <fullName>Fulfilling_Entity__c</fullName>
    <label>Fulfilling Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>