Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/IMF_Upside__c.field-meta.xml
<CustomField>
    <fullName>IMF_Upside__c</fullName>
    <label>IMF/Upside</label>
    <length>255</length>
    <type>Text</type>
</CustomField>