Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/In_Manager_Forecast__c.field-meta.xml
<CustomField>
    <fullName>In_Manager_Forecast__c</fullName>
    <defaultValue>0</defaultValue>
    <label>In Manager Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>