Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/ISM_Material_with_OPC_Snapshot_Name__c.field-meta.xml
<CustomField>
    <fullName>ISM_Material_with_OPC_Snapshot_Name__c</fullName>
    <label>ISM Material with OPC Snapshot Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>