Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/License_Band_Lawyers_Professionals__c.field-meta.xml
<CustomField>
    <fullName>License_Band_Lawyers_Professionals__c</fullName>
    <label>License Band (Lawyers / Professionals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>