Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/MD_Eval_Vision__c.field-meta.xml
<CustomField>
    <fullName>MD_Eval_Vision__c</fullName>
    <label>MD Eval: Vision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>