Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Practice_Group__c.field-meta.xml
<CustomField>
    <fullName>Practice_Group__c</fullName>
    <label>Practice Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>