Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/Upside__c.field-meta.xml
<CustomField>
    <fullName>Upside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upside</label>
    <type>Checkbox</type>
</CustomField>