Doc/force-app/main/default/objects/ISM_Material_with_OPC_Snapshot__c/fields/VP_Eval_Pain__c.field-meta.xml
<CustomField>
    <fullName>VP_Eval_Pain__c</fullName>
    <label>VP Eval: Pain</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>